@@ -2,11 +2,14 @@ package com.englishascension.backend.feature.placementtest.service;
 
 import com.englishascension.backend.feature.ai.service.GroqService;
 import com.englishascension.backend.feature.placementtest.dto.PlacementTestRequest;
-import com.englishascension.backend.feature.roadmap.entity.*;
-import com.englishascension.backend.feature.roadmap.repository.*;
 import com.englishascension.backend.feature.study.entity.Question;
 import com.englishascension.backend.feature.study.repository.QuestionRepository;
+import com.englishascension.backend.feature.roadmap.entity.*;
+import com.englishascension.backend.feature.roadmap.repository.*;
 import com.englishascension.backend.feature.user.entity.User;
+import com.englishascension.backend.feature.user.entity.UserGameStats;
+import com.englishascension.backend.feature.user.entity.UserLessonState;
+import com.englishascension.backend.feature.user.repository.UserLessonStateRepository;
 import com.englishascension.backend.feature.user.repository.UserRepository;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -16,6 +19,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -28,9 +32,8 @@ public class PlacementTestService {
     private final UserRepository userRepository;
     private final QuestionRepository questionRepository;
     private final LearningRoadmapRepository roadmapRepository;
-    private final LessonRepository lessonRepository;
-    private final UserLearningPathRepository userLearningPathRepository;
-    private final UserLearningPathLessonRepository userLearningPathLessonRepository;
+    private final UserRoadmapRepository userRoadmapRepository;
+    private final UserLessonStateRepository userLessonStateRepository;
     private final GroqService groqService;
     private final ObjectMapper objectMapper;
 
@@ -38,34 +41,23 @@ public class PlacementTestService {
             UserRepository userRepository,
             QuestionRepository questionRepository,
             LearningRoadmapRepository roadmapRepository,
-            LessonRepository lessonRepository,
-            UserLearningPathRepository userLearningPathRepository,
-            UserLearningPathLessonRepository userLearningPathLessonRepository,
+            UserRoadmapRepository userRoadmapRepository,
+            UserLessonStateRepository userLessonStateRepository,
             GroqService groqService) {
         this.userRepository = userRepository;
         this.questionRepository = questionRepository;
         this.roadmapRepository = roadmapRepository;
-        this.lessonRepository = lessonRepository;
-        this.userLearningPathRepository = userLearningPathRepository;
-        this.userLearningPathLessonRepository = userLearningPathLessonRepository;
+        this.userRoadmapRepository = userRoadmapRepository;
+        this.userLessonStateRepository = userLessonStateRepository;
         this.groqService = groqService;
         this.objectMapper = new ObjectMapper();
     }
 
     public List<Question> getPlacementTestQuestions() {
-        List<Question> allQuestions = questionRepository.findAllRandom();
+        List<Question> allQuestions = questionRepository.findBySourceType("PLACEMENT_TEST");
+        Collections.shuffle(allQuestions);
         
-        List<Question> vocab = allQuestions.stream().filter(q -> "VOCABULARY".equals(q.getType())).limit(3).toList();
-        List<Question> grammar = allQuestions.stream().filter(q -> "GRAMMAR".equals(q.getType())).limit(3).toList();
-        List<Question> listening = allQuestions.stream().filter(q -> "LISTENING".equals(q.getType())).limit(3).toList();
-        List<Question> reading = allQuestions.stream().filter(q -> "READING".equals(q.getType())).limit(3).toList();
-        
-        List<Question> testQuestions = new ArrayList<>();
-        testQuestions.addAll(vocab);
-        testQuestions.addAll(grammar);
-        testQuestions.addAll(listening);
-        testQuestions.addAll(reading);
-        
+        List<Question> testQuestions = allQuestions.stream().limit(12).collect(Collectors.toList());
         Collections.shuffle(testQuestions);
         return testQuestions;
     }
@@ -87,17 +79,40 @@ public class PlacementTestService {
         int readingCorrect = 0;
 
         for (PlacementTestRequest.AnswerRequest answer : userAnswers) {
+            if (answer == null || answer.getQuestionId() == null) continue;
             Question q = questionRepository.findById(answer.getQuestionId()).orElse(null);
             if (q == null) continue;
 
-            boolean isCorrect = q.getCorrectOption().trim().equalsIgnoreCase(answer.getSelectedOption().trim());
+            String selectedOpt = answer.getSelectedOption();
+            if (selectedOpt == null) continue;
+
+            boolean isCorrect = q.getOptions().stream()
+                    .anyMatch(opt -> opt.getOptionKey() != null && opt.getOptionKey().equalsIgnoreCase(selectedOpt.trim()) && opt.isCorrect());
+
             if (isCorrect) {
                 correctCount++;
-                String qType = q.getType().toUpperCase();
-                if ("VOCABULARY".equals(qType)) vocabCorrect++;
-                else if ("GRAMMAR".equals(qType)) grammarCorrect++;
-                else if ("LISTENING".equals(qType)) listeningCorrect++;
-                else if ("READING".equals(qType)) readingCorrect++;
+                String qText = q.getQuestionText() != null ? q.getQuestionText().toLowerCase() : "";
+                if (qText.contains("[audio question]") || qText.contains("listen to the audio")) {
+                    listeningCorrect++;
+                } else if (qText.contains("read the passage")) {
+                    readingCorrect++;
+                } else if (qText.contains("synonym") || qText.contains("meaning of")) {
+                    vocabCorrect++;
+                } else {
+                    if (q.getLesson() != null) {
+                        if (q.getLesson().getType() == LessonType.LISTENING) {
+                            listeningCorrect++;
+                        } else if (q.getLesson().getType() == LessonType.READING) {
+                            readingCorrect++;
+                        } else if (q.getLesson().getType() == LessonType.VOCABULARY) {
+                            vocabCorrect++;
+                        } else {
+                            grammarCorrect++;
+                        }
+                    } else {
+                        grammarCorrect++;
+                    }
+                }
             }
         }
 
@@ -127,9 +142,20 @@ public class PlacementTestService {
             throw new RuntimeException("Preset Roadmap " + presetId + " not found!");
         }
 
+        // Save UserRoadmap
+        UserRoadmap userRoadmap = userRoadmapRepository.findByUserIdAndRoadmapId(user.getId(), presetId)
+                .orElse(UserRoadmap.builder().user(user).roadmap(preset).build());
+        userRoadmap.setRoadmap(preset);
+        userRoadmap.setPlacementScore(correctCount);
+        userRoadmap.setRecommendedLevel(level);
+        userRoadmap.setTestedAt(LocalDateTime.now());
+
         // AI Personalization - Reordering
-        List<Lesson> presetLessons = preset.getLessons();
-        List<String> orderedIds = null;
+        List<Lesson> presetLessons = new ArrayList<>();
+        for (LearningModule module : preset.getModules()) {
+            presetLessons.addAll(module.getLessons());
+        }
+        List<Long> orderedIds = null;
 
         try {
             String systemPrompt = "You are an AI Education Expert. Your task is to analyze the student's test results, " +
@@ -152,13 +178,13 @@ public class PlacementTestService {
                     m.put("id", l.getId());
                     m.put("title", l.getTitle());
                     m.put("type", l.getType().name());
-                    m.put("difficultyScore", l.getDifficultyScore());
+                    m.put("difficultyScore", l.getDifficultyScore() != null ? l.getDifficultyScore() : 1.0);
                     m.put("topic", l.getTopic() != null ? l.getTopic() : "");
                     return m;
             }).collect(Collectors.toList());
             inputPromptMap.put("lessons", lessonsInfo);
 
-            List<Map<String, String>> prerequisiteGraph = new ArrayList<>();
+            List<Map<String, Object>> prerequisiteGraph = new ArrayList<>();
             for (Lesson l : presetLessons) {
                 for (Lesson prereq : l.getPrerequisites()) {
                     prerequisiteGraph.add(Map.of(
@@ -178,7 +204,7 @@ public class PlacementTestService {
             if (idsNode != null && idsNode.isArray()) {
                 orderedIds = new ArrayList<>();
                 for (JsonNode n : idsNode) {
-                    orderedIds.add(n.asText());
+                    orderedIds.add(n.asLong());
                 }
             }
         } catch (Exception e) {
@@ -188,7 +214,7 @@ public class PlacementTestService {
         // Programmatic Fallback Topological Sort
         List<Lesson> orderedLessons;
         if (orderedIds != null && validateLessonIds(orderedIds, presetLessons)) {
-            Map<String, Lesson> lessonMap = presetLessons.stream().collect(Collectors.toMap(Lesson::getId, l -> l));
+            Map<Long, Lesson> lessonMap = presetLessons.stream().collect(Collectors.toMap(Lesson::getId, l -> l));
             orderedLessons = orderedIds.stream().map(lessonMap::get).collect(Collectors.toList());
             log.info("AI reordering applied successfully.");
         } else {
@@ -196,83 +222,73 @@ public class PlacementTestService {
             log.info("Programmatic fallback reordering applied.");
         }
 
-        // Delete existing path
-        userLearningPathRepository.findByUserId(user.getId()).ifPresent(path -> {
-            userLearningPathRepository.delete(path);
-            userLearningPathRepository.flush();
-        });
+        // Serialize ordered IDs to save in UserRoadmap
+        List<Long> finalOrderedIds = orderedLessons.stream().map(Lesson::getId).collect(Collectors.toList());
+        try {
+            userRoadmap.setPersonalizedLessonsJson(objectMapper.writeValueAsString(finalOrderedIds));
+        } catch (Exception ignored) {}
 
-        // Save new UserLearningPath
-        UserLearningPath userPath = UserLearningPath.builder()
-                .user(user)
-                .roadmap(preset)
-                .build();
-        userPath = userLearningPathRepository.save(userPath);
-
-        List<UserLearningPathLesson> pathLessons = new ArrayList<>();
-        for (int i = 0; i < orderedLessons.size(); i++) {
-            UserLearningPathLesson pathLesson = UserLearningPathLesson.builder()
-                    .learningPath(userPath)
-                    .lesson(orderedLessons.get(i))
-                    .orderIndex(i + 1)
-                    .status(i == 0 ? "IN_PROGRESS" : "LOCKED")
-                    .build();
-            pathLessons.add(userLearningPathLessonRepository.save(pathLesson));
-        }
-        userPath.setLessons(pathLessons);
-        userLearningPathRepository.save(userPath);
+        userRoadmapRepository.save(userRoadmap);
 
         // Grant RPG rewards
-        int currentExp = user.getExp();
-        int currentLevel = user.getLevel();
-        int currentCoins = user.getCoins();
+        UserGameStats stats = user.getUserGameStats();
+        if (stats == null) {
+            stats = UserGameStats.builder()
+                    .user(user)
+                    .userId(user.getId())
+                    .streak(0)
+                    .exp(0)
+                    .level(1)
+                    .build();
+            user.setUserGameStats(stats);
+        }
 
-        currentExp += 100;
-        currentCoins += 50;
+        int currentExp = stats.getExp() + 100;
+        int currentLevel = stats.getLevel();
 
-        boolean leveledUp = false;
         while (true) {
             int expNeeded = currentLevel * 100;
             if (currentExp >= expNeeded) {
                 currentExp -= expNeeded;
                 currentLevel++;
-                leveledUp = true;
             } else {
                 break;
             }
         }
 
-        user.setExp(currentExp);
-        user.setLevel(currentLevel);
-        user.setCoins(currentCoins);
-
-        if (leveledUp) {
-            user.setCharacterTitle(calculateTitle(currentLevel));
-        }
+        stats.setExp(currentExp);
+        stats.setLevel(currentLevel);
         userRepository.save(user);
 
-        return buildRoadmapResponse(userPath);
+        return buildRoadmapResponse(userRoadmap);
     }
 
     public Map<String, Object> getUserRoadmap(String email) {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        UserLearningPath path = userLearningPathRepository.findByUserId(user.getId()).orElse(null);
-        if (path == null) return null;
-        return buildRoadmapResponse(path);
+        List<UserRoadmap> roadmaps = userRoadmapRepository.findByUserId(user.getId());
+        if (roadmaps.isEmpty()) return null;
+
+        UserRoadmap roadmap = roadmaps.stream()
+                .filter(ur -> ur.getRoadmap() != null)
+                .findFirst()
+                .orElse(null);
+
+        if (roadmap == null) return null;
+        return buildRoadmapResponse(roadmap);
     }
 
-    private boolean validateLessonIds(List<String> ids, List<Lesson> presetLessons) {
+    private boolean validateLessonIds(List<Long> ids, List<Lesson> presetLessons) {
         if (ids.size() != presetLessons.size()) return false;
-        Set<String> presetIds = presetLessons.stream().map(Lesson::getId).collect(Collectors.toSet());
+        Set<Long> presetIds = presetLessons.stream().map(Lesson::getId).collect(Collectors.toSet());
         return new HashSet<>(ids).equals(presetIds);
     }
 
     private List<Lesson> programmaticReorder(List<Lesson> presetLessons, Map<LessonType, Integer> scores) {
-        Map<String, Lesson> lessonMap = presetLessons.stream().collect(Collectors.toMap(Lesson::getId, l -> l));
-        Map<String, Set<String>> adj = new HashMap<>();
-        Map<String, Integer> inDegree = new HashMap<>();
+        Map<Long, Lesson> lessonMap = presetLessons.stream().collect(Collectors.toMap(Lesson::getId, l -> l));
+        Map<Long, Set<Long>> adj = new HashMap<>();
+        Map<Long, Integer> inDegree = new HashMap<>();
         
         for (Lesson lesson : presetLessons) {
             adj.putIfAbsent(lesson.getId(), new HashSet<>());
@@ -310,7 +326,7 @@ public class PlacementTestService {
             Lesson selected = candidates.remove(0);
             result.add(selected);
             
-            for (String neighborId : adj.get(selected.getId())) {
+            for (Long neighborId : adj.get(selected.getId())) {
                 inDegree.put(neighborId, inDegree.get(neighborId) - 1);
                 if (inDegree.get(neighborId) == 0) {
                     candidates.add(lessonMap.get(neighborId));
@@ -328,36 +344,81 @@ public class PlacementTestService {
         return result;
     }
 
-    private Map<String, Object> buildRoadmapResponse(UserLearningPath path) {
+    @SuppressWarnings("unchecked")
+    private Map<String, Object> buildRoadmapResponse(UserRoadmap path) {
         Map<String, Object> response = new HashMap<>();
         response.put("id", path.getId());
         response.put("cefrLevel", path.getRoadmap().getCefrLevel());
         response.put("toeicEquivalent", path.getRoadmap().getToeicEquivalent());
         response.put("overallEvaluation", path.getRoadmap().getOverallEvaluation());
         
+        // Parse personalized order
+        List<Object> orderedIds = new ArrayList<>();
+        if (path.getPersonalizedLessonsJson() != null) {
+            try {
+                orderedIds = objectMapper.readValue(path.getPersonalizedLessonsJson(), List.class);
+            } catch (Exception ignored) {}
+        }
+
+        List<Lesson> presetLessons = new ArrayList<>();
+        for (LearningModule module : path.getRoadmap().getModules()) {
+            presetLessons.addAll(module.getLessons());
+        }
+        Map<Long, Lesson> lessonMap = new HashMap<>();
+        for (Lesson l : presetLessons) {
+            lessonMap.put(l.getId(), l);
+        }
+
+        List<Lesson> sortedLessons = new ArrayList<>();
+        for (Object objId : orderedIds) {
+            Long id = null;
+            if (objId instanceof Number n) {
+                id = n.longValue();
+            } else if (objId instanceof String s) {
+                try {
+                    id = Long.parseLong(s);
+                } catch (NumberFormatException ignored) {}
+            }
+            if (id != null && lessonMap.containsKey(id)) {
+                sortedLessons.add(lessonMap.get(id));
+            }
+        }
+        if (sortedLessons.isEmpty()) {
+            sortedLessons.addAll(presetLessons);
+        }
+
+        // Fetch user progress states
+        List<UserLessonState> states = userLessonStateRepository.findByUserId(path.getUser().getId());
+        Set<Long> completedLessonIds = new HashSet<>();
+        for (UserLessonState state : states) {
+            if ("COMPLETED".equals(state.getStatus())) {
+                completedLessonIds.add(state.getLesson().getId());
+            }
+        }
+
         List<Map<String, Object>> modulesList = new ArrayList<>();
-        for (UserLearningPathLesson pl : path.getLessons()) {
+        boolean foundInProgress = false;
+        for (int i = 0; i < sortedLessons.size(); i++) {
+            Lesson l = sortedLessons.get(i);
             Map<String, Object> mod = new HashMap<>();
-            mod.put("id", pl.getId());
-            mod.put("title", pl.getLesson().getTitle());
-            mod.put("description", pl.getLesson().getTopic() != null ? pl.getLesson().getTopic() : "");
-            mod.put("status", pl.getStatus());
-            mod.put("orderIndex", pl.getOrderIndex());
-            mod.put("category", pl.getLesson().getType().name());
+            mod.put("id", l.getId());
+            mod.put("title", l.getTitle());
+            mod.put("description", l.getTopic() != null ? l.getTopic() : "");
+            
+            String status = "LOCKED";
+            if (completedLessonIds.contains(l.getId())) {
+                status = "COMPLETED";
+            } else if (!foundInProgress) {
+                status = "IN_PROGRESS";
+                foundInProgress = true;
+            }
+            
+            mod.put("status", status);
+            mod.put("orderIndex", i + 1);
+            mod.put("category", l.getType().name());
             modulesList.add(mod);
         }
         response.put("modules", modulesList);
         return response;
-    }
-
-    private String calculateTitle(int level) {
-        if (level >= 100) return "Language Legend";
-        if (level >= 80) return "Grand Sage";
-        if (level >= 60) return "Master";
-        if (level >= 40) return "Knight";
-        if (level >= 20) return "Scholar";
-        if (level >= 10) return "Student";
-        if (level >= 5) return "Adventurer";
-        return "Novice";
     }
 }
